# test-try

./: Cargo.toml  README.md  flake.nix  justfile  rustfmt.toml
crates/test-try/: Cargo.toml
crates/test-try-macros/: Cargo.toml
crates/test-try-macros/src/: lib.rs
crates/test-try/examples/: basic.rs
crates/test-try/src/: lib.rs
