[package]
name = "test-try"
description = "An alternative to Rust's `#[test]` macro for writing unit tests."
authors.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
publish = true
homepage = "https://github.com/plul/test-try"
repository = "https://github.com/plul/test-try"
documentation = "https://docs.rs/test-try"

[dependencies]
test-try-macros = "0.1"

[lints]
workspace = true

[dev-dependencies]
derive_more = { version = "2", features = ["error", "display", "from"] }
anyhow = { version = "1" }
